test/functional/failtests/doubleAssign.txt
Error: Cannot redeclare symbol in context: x
2 |     var x = 1;
3 |     var x = 2;
  |     ^ (3:5)
4 | }

